# Rust-Web-Development-with-Rocket

./: .gitignore  README.md
Chapter01/02ComplexProgram/encryptor/: mod.rs  rot13.rs
Chapter01/02SeriousProgram/: main.rs
Chapter01/03Packages/: Cargo.toml
Chapter01/03Packages/src/: lib.rs  main.rs
Chapter01/04Crates/: Cargo.toml
Chapter01/04Crates/src/: lib.rs  main.rs
Chapter01/04Crates/src/cipher/: mod.rs  rot13.rs  rsa.rs
Chapter02/01hello_rocket/src/: main.rs
Chapter02/03config/: Cargo.toml  Rocket.toml
Chapter02/03config/src/: main.rs
Chapter03/01Route/: Cargo.toml
Chapter03/01Route/src/: main.rs
Chapter03/02HTTPMethod/src/: main.rs
Chapter03/03Segment/: Cargo.toml
Chapter03/03Segment/src/: main.rs
Chapter03/04UnusedParameter/src/: main.rs
Chapter03/05NotFromParam/: Cargo.toml
Chapter03/05NotFromParam/src/: main.rs
Chapter03/06IgnoredSegment/src/: main.rs
Chapter03/07Format/src/: main.rs
Chapter03/08Rank/src/: main.rs
Chapter03/09Data/src/: main.rs
Chapter03/10RouteImplementation/src/: main.rs
Chapter03/11CustomResponse/: Cargo.toml
Chapter03/11CustomResponse/src/: main.rs
Chapter03/12MergeJoinResponse/: Cargo.toml
Chapter03/12MergeJoinResponse/src/: main.rs
Chapter03/13Result/src/: main.rs
Chapter03/14NamedFile/src/: main.rs
Chapter03/15ErrorCatcher/: Cargo.toml
Chapter03/15ErrorCatcher/src/: main.rs
Chapter04/01State/: Cargo.toml
Chapter04/01State/src/: main.rs
Chapter04/02ConnectionPoolState/: Cargo.toml  Rocket.toml.example
Chapter04/02ConnectionPoolState/src/: main.rs
Chapter04/03Fairing/: Cargo.toml
Chapter04/03Fairing/migrations/: 20210923055406_create_users.sql
Chapter04/03Fairing/src/: main.rs
Chapter04/04DBPools/: Cargo.toml
Chapter04/04DBPools/src/: main.rs
Chapter05/01ApplicationSkeleton/: Cargo.toml
Chapter05/01ApplicationSkeleton/src/: main.rs
Chapter05/02Module/: Cargo.toml
Chapter05/02Module/src/: main.rs
Chapter05/02Module/src/catchers/: mod.rs
Chapter05/02Module/src/fairings/: db.rs
Chapter05/02Module/src/models/: mod.rs  our_date_time.rs  pagination.rs  photo_post.rs  user.rs  user_status.rs  video_post.rs
Chapter05/02Module/src/routes/: mod.rs  posts.rs  user.rs  users.rs
Chapter06/01CRUD/: Cargo.toml
Chapter06/01CRUD/migrations/: 20210923055406_create_users.sql
Chapter06/01CRUD/src/: main.rs
Chapter06/01CRUD/src/models/: our_date_time.rs  pagination.rs  user.rs  user_status.rs
Chapter06/01CRUD/src/routes/: mod.rs  post.rs  user.rs
Chapter06/01CRUD/src/traits/: mod.rs
Chapter06/01GetUser/: Cargo.toml  Rocket.toml.example
Chapter06/01GetUser/src/models/: user.rs
Chapter06/03CreateUser/: Cargo.toml
Chapter06/03CreateUser/src/: lib.rs
Chapter06/04UpdateUser/src/: main.rs
Chapter06/05Final/: Cargo.toml
Chapter06/05Final/src/: main.rs
Chapter06/05Final/src/models/: user.rs
Chapter07/01Panic/: Cargo.toml
Chapter07/01Panic/src/: main.rs
Chapter07/02Shutdown/src/: main.rs
Chapter07/03CustomError/: Cargo.toml
Chapter07/03CustomError/src/: main.rs
Chapter07/04Logging/: Cargo.toml  Rocket.toml.example
Chapter07/04Logging/migrations/: 20210923055406_create_users.sql
Chapter08/01StaticAssets/: Cargo.toml
Chapter08/01StaticAssets/src/: main.rs
Chapter08/02FileServer/: Cargo.toml  Rocket.toml.example
Chapter08/02FileServer/src/: main.rs
Chapter08/03Form/src/: main.rs
Chapter08/03Template/: Cargo.toml
Chapter08/03Template/src/: main.rs
Chapter08/03Template/src/models/: user.rs
Chapter08/03Template/src/routes/: user.rs
Chapter08/03Template/src/views/users/: tmp.html.tera
Chapter08/04Csrf/src/: main.rs
Chapter08/04Form/: Cargo.toml
Chapter09/01DisplayingPost/: Cargo.toml  Rocket.toml.example
Chapter09/02GenericsAndTraits/: Cargo.toml
Chapter09/03Moved/: .envrc.example
Chapter10/01UploadingText/: Cargo.toml
Chapter10/01UploadingText/src/: lib.rs
Chapter10/02UploadingPhotoSync/: Cargo.toml
Chapter10/02UploadingPhotoSync/migrations/: 20220116065332_create_posts.sql
Chapter10/03UploadingPhotoAsyncIO/: Cargo.toml  Rocket.toml.example
Chapter10/03UploadingPhotoAsyncIO/src/: main.rs
Chapter10/03UploadingPhotoAsyncIO/static/: LICENSE.txt
Chapter10/04UploadingPhotoRayon/: Cargo.toml
Chapter10/04UploadingPhotoRayon/src/: lib.rs
Chapter10/04UploadingPhotoTokio/: Rocket.toml.example
Chapter10/06DeletingPost/: Cargo.toml
Chapter10/06DeletingPost/src/: lib.rs  main.rs
Chapter10/06ProcessingVideo/: Cargo.toml
Chapter10/06ProcessingVideo/src/: main.rs
Chapter11/01UserAuthentication/src/: main.rs
Chapter11/03API/: Cargo.toml
Chapter11/03API/src/: main.rs
Chapter11/04JWT/: Cargo.toml
Chapter12/01RustTesting/src/: lib.rs  main.rs
Chapter12/02TestingInModule/: Cargo.toml
Chapter12/03RocketTesting/: Rocket.toml.example
Chapter12/03RocketTesting/src/: lib.rs  main.rs
Chapter13/02Docker/: Cargo.toml  Cargobuild.toml  Rocket.toml.example
Chapter13/02Docker/src/models/: post.rs  video_post.rs  worker.rs
Chapter13/02Docker/src/routes/: session.rs
Chapter14/01Wasm/: Cargo.toml
Chapter14/01Wasm/our_application/: Cargo.toml  Dockerfile
Chapter14/01Wasm/our_application_wasm/: Cargo.toml  index.html
Chapter14/01Wasm/our_application_wasm/src/: main.rs
Chapter15/01Mailer/: Cargo.toml
Chapter15/01Mailer/src/: lib.rs
Chapter15/01Mailer/tests/: functional_tests.rs
Chapter15/02Actix/: Cargo.toml
Chapter15/02Actix/src/: main.rs
Chapter15/03Tide/: Cargo.toml
Chapter15/03Tide/src/: main.rs
Chapter15/04Warp/: Cargo.toml
Chapter15/04Warp/src/: main.rs
(+158 files in other folders)
