[package]
edition = "2018"
name = "chapter4"
version = "0.1.0"

[dependencies]
rocket = "0.5.0-rc.2"
rocket_db_pools = {version = "0.1.0-rc.2", features = ["sqlx_postgres"]}
sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls"]}
uuid = {version = "0.8.2", features = ["v4"]}
