[package]
edition = "2018"
name = "our_application"
version = "0.1.0"

[dependencies]
chrono = "0.4"
rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid"]}
rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"]}
sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
uuid = {version = "0.8.2", features = ["v4"]}
