[package]
edition = "2018"
name = "our_application"
version = "0.1.0"

[dependencies]
chrono = "0.4"
rocket = {path = "../../../rocket/core/lib/", features = ["uuid"]}
rocket_db_pools = {path = "../../../rocket/contrib/db_pools/lib/", features = ["sqlx_postgres"]}
sqlx = {version = "0.5.9", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
uuid = {version = "0.8.2", features = ["v4"]}

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"
