[package]
edition = "2018"
name = "our_application"
version = "0.1.0"

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
ammonia = "3.1.2"
argon2 = {version = "0.3", features = ["std"]}
async-log = "2.0.0"
chrono = {version = "0.4", features = ["serde"]}
fern = "0.6"
log = "0.4"
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5.4"
rocket = {path = "../../../rocket/core/lib/", features = ["uuid", "json"]}
rocket_db_pools = {path = "../../../rocket/contrib/db_pools/lib/", features = ["sqlx_postgres"]}
rocket_dyn_templates = {path = "../../../rocket/contrib/dyn_templates/", features = ["tera"]}
serde = "1.0.130"
sqlx = {version = "0.5.9", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
uuid = {version = "0.8.2", features = ["v4"]}
zxcvbn = "2"
