[package]
edition = "2018"
name = "our_application"
version = "0.1.0"

[[bin]]
name = "our_application"
path = "src/main.rs"

[lib]
name = "our_application"
path = "src/lib.rs"

[dependencies]
ammonia = "3.1.2"
argon2 = {version = "0.4", features = ["std"]}
async-log = "2.0.0"
base64 = {version = "0.13.0"}
chrono = {version = "0.4", features = ["serde"]}
fern = "0.6"
ffmpeg-cli = "0.1"
flume = "0.10.10"
hmac = "0.12.1"
image = "0.24.0"
jwt = "0.16.0"
log = "0.4"
rand_core = {version = "0.6", features = ["std"]}
regex = "1.5.4"
rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["uuid", "secrets", "json"]}
rocket_db_pools = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["sqlx_postgres"]}
rocket_dyn_templates = {git = "https://github.com/SergioBenitez/Rocket", rev = "6bdd2f8", features = ["tera"]}
serde = "1.0.130"
sha2 = "0.10.2"
sqlx = {version = "0.5", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"]}
time = {version = "0.3", features = ["std"]}
tokio = {version = "1.16", features = ["fs", "rt"]}
uuid = {version = "0.8.2", features = ["v4"]}
zxcvbn = "2"

[dev-dependencies]
scraper = "0.12.0"

[profile.dev]
split-debuginfo = "packed"
